feb24/ingress_learn2/service2.yaml
apiVersion: v1
kind: Service
metadata: 
  name: app2serv
  namespace: ts
spec: 
  type: ClusterIP
  selector:
    app: app2temp
  ports:
    - port: 80
      targetPort: app2cport
      #nodePort: 30007
